# hw3-lils-wang

./: .gitignore  Makefile  README.md  ai_documentation.txt  landing_page.md  myst.yml  pyproject.toml
.ipynb_checkpoints/: LOSC_Event_tutorial-checkpoint.ipynb  myst-checkpoint.yml
data/: GW150914_data.csv
ligotools/: utils.py
ligotools/tests/: test_utils.py
ligotools/tests/.ipynb_checkpoints/: test_readligo-checkpoint.py
